fixed project spacing

--- a/src/App.scss
+++ b/src/App.scss
@@ -68,6 +68,31 @@ a {
 	color: unset;
 	text-decoration: none;
 }
+.icon {
+	min-height: 3.2rem;
+	min-width: 3.2rem;
+}
+
+.hover-underline-animation {
+	display: inline-block;
+	position: relative;
+}
+.hover-underline-animation:after {
+	content: "";
+	position: absolute;
+	width: 100%;
+	transform: scaleX(0);
+	height: 2px;
+	bottom: 0;
+	left: 0;
+	background-color: hsl(209, 91%, 57%);
+	transform-origin: bottom right;
+	transition: transform 0.2s linear;
+}
+.hover-underline-animation:hover:after {
+	transform: scaleX(1);
+	transform-origin: bottom left;
+}
 
 //mixins
 @mixin project-button {
@@ -78,13 +103,14 @@ a {
 	transition: all ease 0.2s;
 	border: none;
 	border-radius: 4px;
+	user-select: none;
 }
 
 //styling done top to bottom
 //navbar
 
 .navbar {
-	margin-bottom: 4rem;
+	margin-bottom: 8rem;
 	.navbar-content {
 		max-width: 60%;
 		margin: 0 auto;
@@ -93,7 +119,9 @@ a {
 		align-items: center;
 		min-height: 10vh;
 		h2 {
-			font-size: 3.2rem;
+			font-size: 4.2rem;
+			cursor: pointer;
+			user-select: none;
 		}
 
 		.light-switch {
@@ -107,13 +135,10 @@ a {
 			min-width: 20rem;
 			justify-content: space-between;
 			li {
-				font-size: 1.8rem;
+				user-select: none;
+				font-size: 2.2rem;
 				font-weight: bold;
 				padding: 0.8rem;
-				&:hover {
-					text-decoration: underline;
-					color: hsl(0, 0%, 30%);
-				}
 			}
 		}
 	}
@@ -121,7 +146,7 @@ a {
 
 //hero section
 .hero-section {
-	margin-bottom: 12rem;
+	margin-bottom: 8rem;
 	.hero-section-content {
 		max-width: 60%;
 		margin: 0 auto;
@@ -194,7 +219,6 @@ a {
 		h2 {
 			font-size: 4rem;
 			text-align: center;
-			margin-bottom: 2rem;
 		}
 
 		.projects-list {
@@ -269,12 +293,12 @@ a {
 	backdrop-filter: blur(20rem);
 }
 .project {
+	//some inline css done for last project cause styling tings
 	min-width: 30rem;
 	max-width: 30rem;
 	height: 50rem;
 	border-radius: 0.8rem;
-	margin: 28px auto;
-
+	margin: 28px 0;
 	color: hsl(0, 0%, 10%);
 	flex: 0 0 33.3%;
 	.project-content {
